<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">BucketLST</string>
    <string name="hello">Hello BucketLST</string>
    <string name="title">Task</string>
    <string name="category">Bucket</string>
    <string name="add">Done</string>
    <string name="catSelect">Select a Bucket</string>
   	<string name="menu_delete">Delete Task</string>
   	<string name="menu_edit">Edit Task</string>
   	<string name="menu_check">Mark as Done</string>
    <string name="menu_insert">Add Task</string>
    <string name="cat_delete">Delete Bucket</string>
    <string name="priSelect">Set Priority</string>
    <string name="priority">Priority</string>
	<string name="setDate">Set Date</string>
	<string name="dDate">Due Date</string>
	<string name="notes">My Notes</string>
	<string name="taskComplete">Done</string>
	<string name="choCollab">Choose Collaborators</string>
	<string name="collaborators">Collaborators</string>
    
</resources>
