<?xml version="1.0" encoding="utf-8"?>

<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/love">
        
        <android.widget.TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            />
            
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
         >
         
			<LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/infoTab"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				>
			
				<ScrollView
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="0.0dip"
					android:layout_weight="1.0"
					>
					<LinearLayout
						xmlns:android="http://schemas.android.com/apk/res/android"
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<TextView
								android:textStyle="bold"
								android:textColor="#FFFFFFFF"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:text="@string/title"
								>
							</TextView>
						</LinearLayout>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<EditText
								android:id="@+id/titleGet"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1.0"
								>
							</EditText>
							<ImageButton
								android:id="@+id/speakNow"
								android:layout_width="48.0dip"
								android:layout_height="48.0dip"
								android:src="@drawable/selector_speak_now"
								android:scaleType="center"
								>
							</ImageButton>
						</LinearLayout>
									<View
							android:background="@drawable/line"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="1.0dip"
							>
						</View>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<TextView
								android:textStyle="bold"
								android:textColor="#FFFFFFFF"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:text="@string/category"
								>
							</TextView>
						</LinearLayout>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
								<Button
							    android:background="@android:drawable/btn_dropdown" 
								android:id="@+id/newCategory"
								android:layout_width="fill_parent" 
								android:layout_height="wrap_content" 
								android:text="@string/catSelect"
								android:paddingTop="8dip"
								android:layout_gravity="center"
								android:gravity="left|center_vertical"
								/>
						</LinearLayout>
						<View
							android:background="@drawable/line"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="1.0dip"
							>
						</View>
						<LinearLayout
							android:orientation="vertical"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<TextView
								android:textStyle="bold"
								android:textColor="#FFFFFFFF"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:text="@string/dDate"
								>
							</TextView>
						</LinearLayout>
						<LinearLayout
							android:layout_gravity="center"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<Button
								android:id="@+id/dueDate"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:text="@string/setDate"
								>
							</Button>
						</LinearLayout>
						<View
							android:background="@drawable/line"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="1.0dip"
							>
						</View>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<TextView
								android:textStyle="bold"
								android:textColor="#FFFFFFFF"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:text="@string/priority"
								>
							</TextView>
						</LinearLayout>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<Spinner
								android:id="@+id/newPri"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:drawSelectorOnTop="true"
								android:prompt="@string/priSelect"
								>
							</Spinner>
						</LinearLayout>
					</LinearLayout>
				</ScrollView>
				<LinearLayout 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent"
					android:layout_alignParentBottom="true"
					style="@android:style/ButtonBar"
					>
					    <Button
						android:id="@+id/taskDone"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content" 
						android:text="@string/taskComplete"
						android:paddingTop="8dip"
						android:layout_gravity="center|bottom"
						/>
			     </LinearLayout>
			</LinearLayout>
         
         	<LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/notesTab"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				>
			
				<ScrollView
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="0.0dip"
					android:layout_weight="1.0"
					>
					<LinearLayout
						xmlns:android="http://schemas.android.com/apk/res/android"
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							>
							<ImageButton
								android:id="@+id/speakNow"
								android:layout_width="48.0dip"
								android:layout_height="48.0dip"
								android:src="@drawable/selector_speak_now"
								android:scaleType="center"
								>
							</ImageButton>
						</LinearLayout>
						<View
							android:background="@drawable/line"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="1.0dip"
							>
						</View>
						<LinearLayout
							android:orientation="horizontal"
							android:padding="5.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							>
							<EditText
								android:gravity="top|left"
								android:id="@+id/myNotes"
								android:scrollbars="vertical"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:hint="@string/notes"
								android:lines="9"
								>
							</EditText>
						</LinearLayout>
					</LinearLayout>
				</ScrollView>
				<LinearLayout 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent"
					android:layout_alignParentBottom="true"
					style="@android:style/ButtonBar"
					>
					    <Button
						android:id="@+id/taskDone"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content" 
						android:text="Add Task"
						android:paddingTop="8dip"
						android:layout_gravity="center|bottom"
						/>
				 </LinearLayout>
			</LinearLayout>	         
                
        </FrameLayout>
        
    </LinearLayout>
    
</TabHost>
